AC_INIT([tntnet],[1.5.0pre7],[Tommi Maekitalo <tommi@tntnet.org>])
AM_INIT_AUTOMAKE(tntnet, 1.5.0pre7)

abi_current=4
abi_revision=1
abi_age=0
sonumber=${abi_current}:${abi_revision}:${abi_age}
AC_SUBST(sonumber)

unset CDPATH

AC_CONFIG_HEADERS([framework/common/config.h])
AC_CONFIG_HEADERS([framework/common/tnt/config.h])
AC_CONFIG_SRCDIR([framework/runtime/tntnet.cpp])

AC_SEARCH_LIBS(gethostbyname, nsl socket resolv)
AC_SEARCH_LIBS(inet_ntop, nsl socket resolv)
AC_CHECK_FUNCS(inet_ntop)

AC_PROG_CXX(g++ c++ CC)
AC_PROG_LIBTOOL

AC_LANG(C++)

#
# Cxxtools
#
AC_PATH_PROGS(CXXTOOLS_CONFIG, cxxtools-config)
if ! test -x "$CXXTOOLS_CONFIG"; then
  AC_MSG_ERROR([cxxtools configuration script was not found])
fi

CXXTOOLS_CXXFLAGS=`$CXXTOOLS_CONFIG --cxxflags`
CXXTOOLS_LDFLAGS=`$CXXTOOLS_CONFIG --libs`
CXXFLAGS="$CXXFLAGS $CXXTOOLS_CXXFLAGS"
LDFLAGS="$CXXFLAGS $CXXTOOLS_LDFLAGS"

AC_CHECK_HEADER([cxxtools/log.h], , AC_MSG_ERROR([cxxtools-logging not found]))

AC_MSG_CHECKING([for cxxtools usability])
AC_COMPILE_IFELSE(
  [#include <cxxtools/thread.h>
   void t() { cxxtools::AttachedThread* p; }
  ],
  AC_MSG_RESULT(yes),
  [
    AC_MSG_RESULT(no)
    AC_MSG_ERROR(please check your cxxtools-installation - maybe you need an upgrade)
  ]
  )

AC_SUBST(CXXTOOLS_CONFIG)
AC_SUBST(CXXTOOLS_CXXFLAGS)
AC_SUBST(CXXTOOLS_LDFLAGS)

AC_CHECK_HEADER([zlib.h], , AC_MSG_ERROR([zlib not found]))
AC_CHECK_HEADERS([limits])

#
# OpenSSL
#
AC_ARG_WITH([openssl],
  AS_HELP_STRING([--with-openssl], [build with OpenSSL support]),
  [openssl_prefix=$withval],
  [
    AC_MSG_RESULT([building with OpenSSL support])
    AC_DEFINE([USE_SSL], 1, [Define to build with (Open)SSL support. (--with-openssl)])
    openssl=1

    if test -d "${openssl_prefix}/include" ; then
      INCLUDES="$INCLUDES -I${openssl_prefix}/include"
    fi
    if test -d "${openssl_prefix}/lib" ; then
      LIBDIRS="$LIBDIRS -L${openssl_prefix}/lib"
    fi
    AC_CHECK_HEADER([openssl/ssl.h], [], [AC_MSG_ERROR(openssl/ssl.h not found)])

  ])

AM_CONDITIONAL(MAKE_OPENSSL, test x$openssl == x1)

#
# others
#
AC_CHECK_FUNCS([setenv])

AC_CONFIG_FILES([
    Makefile
    framework/common/Makefile
    framework/runtime/Makefile
    framework/defcomp/Makefile
    framework/cgi/Makefile
    sdk/tools/common/Makefile
    sdk/tools/ecppc/Makefile
    sdk/tools/ecppl/Makefile
    sdk/tools/ecppll/Makefile
    sdk/demos/calc/Makefile
    sdk/demos/cgi-getenv/Makefile
    sdk/demos/config/Makefile
    sdk/demos/controls/Makefile
    sdk/demos/cookie/Makefile
    sdk/demos/hello/Makefile
    sdk/demos/savepoint/Makefile
    sdk/demos/session/Makefile
    sdk/demos/sprintf/Makefile
    sdk/demos/strings/Makefile
    sdk/demos/subcomp/Makefile
    sdk/demos/upload/Makefile
    etc/Makefile
    tntnet-config
    ])

AC_OUTPUT

chmod +x tntnet-config
