AC_PREREQ(2.68)
AC_INIT(tntwiki, trunk, [Tommi Maekitalo <tommi@tntnet.org>])
AM_INIT_AUTOMAKE

AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_HEADERS([src/config.h])
AC_CONFIG_SRCDIR([src/lib/PageManager.cpp])
AC_DISABLE_STATIC

abi_current=0
abi_revision=0
abi_age=0
sonumber=${abi_current}:${abi_revision}:${abi_age}
AC_SUBST(sonumber)

# Checks for programs.
AC_PROG_CXX
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_LIBTOOL
AC_PATH_PROG([ECPPC], [ecppc])
if test "$ECPPC" = ""
then
    AC_MSG_ERROR([ecppc not found])
fi

AC_PATH_PROG([CXXTOOLS_CONFIG], [cxxtools-config])
if test "$CXXTOOLS_CONFIG" = ""
then
    AC_MSG_ERROR([cxxtools-config not found])
fi

# Check for compiler flags.
AC_LANG(C++)

AX_COMPILER_VENDOR
AS_IF([test "$ax_cv_cxx_compiler_vendor" = "ibm"],
      [CXXFLAGS="$CXXFLAGS -qrtti -qlanglvl=newexcp -D__NOLOCK_ON_INPUT -D__NOLOCK_ON_OUTPUT"],
      AX_CHECK_COMPILE_FLAG([-Wno-long-long], [CXXFLAGS="$CXXFLAGS -Wno-long-long"])
      AX_CHECK_COMPILE_FLAG([-Wall], [CXXFLAGS="$CXXFLAGS -Wall"])
      AX_CHECK_COMPILE_FLAG([-pedantic], [CXXFLAGS="$CXXFLAGS -pedantic"]))

# Checks for libraries.
AC_CHECK_LIB([cxxtools], [main], [true])
AC_CHECK_LIB([tntdb], [main], [true])
AC_CHECK_LIB([tntnet], [main], [true])

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([fcntl.h limits.h stdint.h stdlib.h string.h sys/time.h unistd.h])
AC_CHECK_HEADER([cxxtools/log.h], , AC_MSG_ERROR([cxxtools headers not found]))
AC_CHECK_HEADER([tntdb/value.h], , AC_MSG_ERROR([tntdb headers not found]))
AC_CHECK_HEADER([tnt/ecpp.h], , AC_MSG_ERROR([tntnet headers not found]))

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_TIME
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_MKTIME
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_CHECK_FUNCS([alarm floor getcwd getpagesize gettimeofday localtime_r memset mkdir pow rmdir select setenv sqrt strchr strdup strtol tzset])

AC_CONFIG_FILES([
	Makefile

    include/Makefile
    src/lib/Makefile
    src/web/Makefile
    test/Makefile
  ])

AC_OUTPUT
